add participants page

--- a/modules/party-gift-randomizer/pages/gifts/gifts.wxml
+++ b/modules/party-gift-randomizer/pages/gifts/gifts.wxml
@@ -1,2 +1,3 @@
-<!--modules/party-gift-randomizer/pages/gifts/gifts.wxml-->
-<text>modules/party-gift-randomizer/pages/gifts/gifts.wxml</text>
+<view class="gifts">
+<view class="btn-add"><button>+</button></view>
+</view>
