--- a/modules/party-gift-randomizer/pages/participants/participants.wxss
+++ b/modules/party-gift-randomizer/pages/participants/participants.wxss
@@ -1,1 +1,82 @@
 @import "/base/index.wxss";
+
+.participants {
+  padding: 80rpx;
+}
+
+.avatars-section {
+  height: 480rpx;
+  overflow-y: scroll;
+}
+
+.avatar-container {
+  display: inline-block;
+  border: solid 1px black;
+  margin: 10rpx 20rpx;
+  width: 100rpx;
+  height: 100rpx;
+  box-sizing: border-box;
+  border-radius: 50rpx;
+  position: relative;
+}
+
+.avatar {
+  width: 100%;
+  height: 100%;
+}
+.ready-icon {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.btn-view {
+  margin: 60rpx auto 30rpx;
+  width: 60%;
+}
+.btn-ready {
+  width: 60%;
+  margin: 0 auto;
+}
+.btn-start {
+  margin: 60rpx auto 0;
+  width: 25%;
+}
+
+.desc {
+  margin-top: 20rpx;
+  color: #888888;
+  font-size: 28rpx;
+}
+
+.input-container {
+  display: flex;
+  align-items: center;
+  margin-top: 20rpx;
+}
+.label {
+  width: 30%;
+}
+ input {
+   display: inline-block;
+   width: 50%;
+   border: solid 1px #eaeaea;
+   padding-left: 10rpx;
+ }
+
+::-webkit-scrollbar {
+  width: 6px;
+  background-color: #eaeaea;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #eaeaea;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
+  background-color: gray;
+}
