--- a/modules/party-gift-randomizer/pages/participants/participants.wxml
+++ b/modules/party-gift-randomizer/pages/participants/participants.wxml
@@ -1,7 +1,7 @@
 <view class="participants">
   <view class="avatars-section">
     <scroll-view scroll-y="true">
-      <view class="avatar-container" wx:for="{{participantsList}}" wx:key="{{index}}" wx:for-item="item">
+      <view class="avatar-container" wx:for="{{app.globalData.party.participants}}" wx:key="{{index}}" wx:for-item="item">
         <image class="avatar" src="{{item.avatar[0].url}}" />
         <icon class="ready-icon" type="success" size="20" wx:if="{{item.status}}"></icon>
       </view>
