--- a/modules/party-gift-randomizer/pages/index/index.wxml
+++ b/modules/party-gift-randomizer/pages/index/index.wxml
@@ -5,8 +5,8 @@
   </view>
   
   <view class="btn-area">
-    <button type="primary" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onCreateWithUserInfo">安排！</button>
-    <button open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onJoinWithUserInfo">安排(JOIN)！</button>
+    <button wx:if="{{id == 0}}" type="primary" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onCreateWithUserInfo">安排！</button>
+    <button wx:if="{{id > 0}}" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onJoinWithUserInfo">安排(JOIN)！</button>
   </view>
 
 </view>
