--- a/modules/party-gift-randomizer/pages/gifts/gifts.wxml
+++ b/modules/party-gift-randomizer/pages/gifts/gifts.wxml
@@ -1,5 +1,4 @@
 <view class="gifts">
-
   <view class="btn-add">
     <navigator open-type="navigateTo" url="../addGift/addGift" hover-class="navigator-hover" class='list-item'>
       <button class="add">+</button>
@@ -8,7 +7,7 @@
 
   <view class="costume-container" wx:for="{{giftsList}}" wx:key="{{index}}" wx:for-item="item">
     <view class="list-item" wx:if="{{!item.participantId}}">
-      <image class="thumbnail" src="{{item.thumbnail[0].url}}" />
+      <image class="thumbnail" src="{{imageBaseUrl}}{{item.thumbnail[0].url}}" />
     </view>
     <view class="list-item" wx:elif="{{item.participantId}}">
       <image class="thumbnail" src="../../../../resources/images/default.jpg" />
