--- a/modules/party-gift-randomizer/pages/chooseGift/chooseGift.wxml
+++ b/modules/party-gift-randomizer/pages/chooseGift/chooseGift.wxml
@@ -9,21 +9,14 @@
       </view>
     </view>
 
-
-
     <view class="page-section">
       <view class="page-section-title">
         <text>flex-direction: row\n横向布局</text>
       </view>
       <view class="page-section-spacing">
         <scroll-view scroll-y="true" style="height: 600rpx;" bindscrolltoupper="upper" bindscrolltolower="lower" bindscroll="scroll" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
-          <view class="flex-wrp" style="flex-direction:row;">
+          <view class="flex-wrp" style="flex-direction:row;" wx:for="{{gifts}}" wx:key="{{index}}" wx:for-item="item">
             <view class="flex-item">1</view>
-            <view class="flex-item">2</view>
-            <view class="flex-item">3</view>
-            <view class="flex-item">4</view>
-            <view class="flex-item">5</view>
-            <view class="flex-item">6</view>
           </view>
         </scroll-view>
       </view>
