--- a/modules/party-gift-randomizer/pages/share/share.wxml
+++ b/modules/party-gift-randomizer/pages/share/share.wxml
@@ -1,15 +1,13 @@
-<view class="index">
+<view class="index page">
   <view class="index-hd">
     <image class="index-logo" src="{{qrcodeUrl}}"></image>
     <view class="index-desc">保存并分享二维码，让朋友们参加你的万圣趴</view>
   </view>
-  
+
   <view class="btn-area">
-    <button type="primary" bindtap='onSaveButtonClicked'>存到相册</button>
+    <button class="button" bindtap='onSaveButtonClicked' plain="true">存到相册</button>
   </view>
-
+  <view class="bg-container">
+    <image class="bg-image" src="/resources/images/halloween/bg_bottom.png"></image>
+  </view>
 </view>
-
-
-
-
