--- a/base/index.wxss
+++ b/base/index.wxss
@@ -1,3 +1,24 @@
+
+.page {
+  background-color: rgba(104,35,47,1);
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+.bg-container {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 30%;
+  z-index: 1;
+}
+.bg-image {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
 .index-hd {
   padding: 80rpx;
   text-align: center;
@@ -15,7 +36,7 @@
 }
 .index-desc {
   margin-top: 20rpx;
-  color: #888888;
+  color: #FFC1C1;
   font-size: 28rpx;
 }
 
@@ -108,4 +129,28 @@
 }
 .list-item-bd-show {
   height: auto;
+}
+.button[plain] {
+  z-index: 2;
+  color: #FFFFFF;
+  border-color: #FFFFFF;
+  border-radius: 40rpx;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+::-webkit-scrollbar {
+  width: 6px;
+  background-color: rgba(255,255,255,.2);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 10px rgba(104,35,47,1);
+  background-color: rgba(104,35,47,1);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 10px rgba(255,255,255,.2);
+  background-color: rgba(255,255,255,.2);
 }
