--- a/modules/party-gift-randomizer/pages/getGift/getGift.wxss
+++ b/modules/party-gift-randomizer/pages/getGift/getGift.wxss
@@ -1,1 +1,24 @@
 @import "/base/index.wxss";
+.page-body {
+  padding-top: 200rpx;
+}
+.index-desc {
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+textarea {
+  margin-top: 50rpx;
+  background-color: #89424F;
+  width: 100%;
+  padding: 0 10%;
+}
+.friend {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+text {
+  margin: 20rpx;
+  color: #fff;
+}
