--- a/modules/party-gift-randomizer/pages/gifts/gifts.wxml
+++ b/modules/party-gift-randomizer/pages/gifts/gifts.wxml
@@ -1,21 +1,26 @@
-<view class="gifts">
-  <view class="btn-add">
-    <navigator open-type="navigateTo" url="../addGift/addGift" hover-class="navigator-hover" class='list-item'>
-      <button class="add">+</button>
-    </navigator>
-  </view>
-
-  <view class="costume-container" wx:for="{{gifts}}" wx:key="{{index}}" wx:for-item="item">
-    <view class="list-item" wx:if="{{!item.participant.id}}">
-      <image class="thumbnail" src="{{imageBaseUrl}}{{item.thumbnail[0].url}}" />
+<view class="gifts page">
+  <view class="gifts-section">
+    <view class="btn-add">
+      <navigator open-type="navigateTo" url="../addGift/addGift" hover-class="navigator-hover" class='list-item'>
+        <button class="add">+</button>
+      </navigator>
     </view>
-    <view class="list-item" wx:elif="{{item.participant.id}}">
-      <image class="thumbnail" src="../../../../resources/images/default.jpg" />
-      <view class="avatar-contaienr">
-      <!-- todo：需要替换成用户头像url -->
-        <image class="thumbnail" src="{{imageBaseUrl}}{{item.participant.avatar[0].url}}"></image>
+
+    <view class="costume-container" wx:for="{{gifts}}" wx:key="{{index}}" wx:for-item="item">
+      <view class="list-item" wx:if="{{item.participant.id}}">
+        <image class="thumbnail" src="{{imageBaseUrl}}{{item.thumbnail[0].url}}" />
+      </view>
+      <view class="list-item" wx:elif="{{!item.participant.id}}">
+        <image class="thumbnail" src="/resources/images/halloween/pic_custom.png" />
+        <view class="avatar-contaienr">
+          <!-- todo：需要替换成用户头像url -->
+          <image class="thumbnail" src="{{imageBaseUrl}}{{item.participant.avatar[0].url}}"></image>
+        </view>
       </view>
     </view>
-  </view>
 
+    <view class="bg-container">
+      <image class="bg-image" src="/resources/images/halloween/bg_bottom.png"></image>
+    </view>
+  </view>
 </view>
