--- a/modules/party-gift-randomizer/pages/index/index.wxml
+++ b/modules/party-gift-randomizer/pages/index/index.wxml
@@ -1,16 +1,17 @@
 <view class="index">
+  <view class="index-bg">
+    <image class="bg-image" src="/resources/images/halloween/bg_homepage.png"></image>
+  </view>
   <view class="index-hd">
-    <image class="index-logo" src="/resources/images/kind/logo.png"></image>
     <view class="index-desc">建立一个万圣节活动，随机安排一个朋友为你购买万圣节道具。</view>
   </view>
-  
+
   <view class="btn-area">
-    <button wx:if="{{id == 0}}" type="primary" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onCreateWithUserInfo">安排！</button>
-    <button wx:if="{{id > 0}}" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onJoinWithUserInfo">安排(JOIN)！</button>
+    <image class="btn-img" src="{{buttonUrl}}"></image>
+    <button wx:if="{{id == 0}}" type="primary" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onCreateWithUserInfo" plain='true'>
+    </button>
+    <button wx:if="{{id > 0}}" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onJoinWithUserInfo" plain="true">
+    </button>
   </view>
 
 </view>
-
-
-
-
