--- a/modules/party-gift-randomizer/pages/index/index.wxss
+++ b/modules/party-gift-randomizer/pages/index/index.wxss
@@ -1,1 +1,44 @@
 @import "/base/index.wxss";
+.index {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+}
+.index-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+}
+.bg-image {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  -o-object-fit: cover;
+}
+.index-hd {
+  margin-top: 70%;
+}
+.btn-area {
+  position: relative;
+  text-align: center;
+}
+button {
+  border: none;
+  padding: 0;
+  height: 200rpx;
+  width: 200rpx;
+  opacity: 0;
+  position:absolute;
+  top: 0;
+  left:50%;
+  transform:translateX(-50%);
+}
+.btn-img {
+  height: 200rpx;
+  width: 200rpx;
+  margin: 20rpx auto;
+}
