--- a/modules/party-gift-randomizer/pages/addGift/addGift.wxss
+++ b/modules/party-gift-randomizer/pages/addGift/addGift.wxss
@@ -1,20 +1,17 @@
-@import "/base/index.wxss";
+@import "../../base/app.wxss";
 
 .page-body {
-  padding-top: 200rpx;
+    padding-top: 200rpx;
 }
 
 .index-desc {
-  width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
+    font-size: 12px;
 }
-.guide[plain] {
-  border: none;
-  text-decoration: underline;
-}
+
 textarea {
-  background-color: #89424F;
-  width: 100%;
-  padding: 0 10%;
+    font-size: 12px;
+    background-color: #89424f;
+    padding: 15px 15px;
+    color: white;
+    width: auto;
 }
