--- a/modules/party-gift-randomizer/pages/chooseGift/chooseGift.wxss
+++ b/modules/party-gift-randomizer/pages/chooseGift/chooseGift.wxss
@@ -1,30 +1,36 @@
-@import "/base/index.wxss";
+@import "../../base/app.wxss";
 
-.friend {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-text {
-  margin: 20rpx;
-  color: #fff;
-}
 scroll-view {
-  border-top: solid 1px #eaeaea;
+    height: 470rpx;
+    padding-top: 60rpx;
+    border-top: solid 1px rgba(255,255,255,0.2);
 }
-.flex-wrp{
-  margin-top: 60rpx;
-  display:block;
+
+.flex-wrp {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-flow: row wrap;
+    align-content: flex-end;
 }
-.flex-item{
-  width: 30%;
-  height: 200rpx;
-  font-size: 26rpx;
-  float: left;
-  background: red;
-  margin: 10rpx;
+
+.flex-item {
+    z-index: 99;
+    width: 165rpx;
+    height: 165rpx;
+    font-size: 26rpx;
+    border: 2px transparent solid;
+    overflow: hidden;
+    margin: 5rpx;
 }
-.button[plain] {
-  background-color: #FF9814;
-  border-color: #FF9814;
+
+.flex-item.selected {
+    border-color: red
+}
+
+.thumbnail {
+    width: 170rpx;
+    height: 170rpx;
 }
