--- a/modules/party-gift-randomizer/pages/index/index.wxml
+++ b/modules/party-gift-randomizer/pages/index/index.wxml
@@ -1,17 +1,14 @@
 <view class="index">
-  <view class="index-bg">
-    <image class="bg-image" src="/resources/images/halloween/bg_homepage.png"></image>
-  </view>
-  <view class="index-hd">
-    <view class="index-desc">建立一个万圣节活动，随机安排一个朋友为你购买万圣节道具。</view>
-  </view>
+    <view class="index-bg">
+        <image class="bg-image" src="/resources/images/halloween/bg_homepage.png"></image>
+    </view>
+    <view class="index-hd">
+        <text class="index-desc">建立一个万圣节活动，随机安排一个朋友为你购买万圣节道具。</text>
+    </view>
 
-  <view class="btn-area">
-    <image class="btn-img" src="{{buttonUrl}}"></image>
-    <button wx:if="{{id == 0}}" type="primary" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onCreateWithUserInfo" plain='true'>
-    </button>
-    <button wx:if="{{id > 0}}" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onJoinWithUserInfo" plain="true">
-    </button>
-  </view>
-
+    <view class="btn-area">
+        <image class="btn-img" src="{{buttonUrl}}"></image>
+        <button wx:if="{{id == 0}}" type="primary" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onClickCreate" plain='true'></button>
+        <button wx:if="{{id > 0}}" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onClickJoin" plain="true"></button>
+    </view>
 </view>
