--- a/modules/party-gift-randomizer/pages/addGift/addGift.wxml
+++ b/modules/party-gift-randomizer/pages/addGift/addGift.wxml
@@ -1,25 +1,11 @@
-<view class="container page">
-    <view class="page-body">
+<view class="page">
 
-        <view class="page-section">
-            <view class="page-section-spacing">
-                <view class="index-desc">如果你有很好的万圣节道具想法请添加道具购买链接分享给你的朋友们</view>
-            </view>
-        </view>
+    <text>如果你有很好的万圣节道具想法请添加道具购买链接分享给你的朋友们</text>
 
-        <view class="page-section">
-            <view class="textarea-wrp">
-                <textarea placeholder="淘宝／京东购物链接" bindinput="onTextAreaChange" auto-focus/>
-            </view>
-        </view>
-    </view>
+    <textarea placeholder="淘宝／京东购物链接" bindinput="onTextAreaChange" auto-focus/>
 
-    <view class="btn-area">
-        <button class='primary' bindtap='onClickAddGift'>提交</button>
-        <button class='plain' bindtap='onInfoClicked'>操作提示</button>
-    </view>
+    <button plain class='primary' bindtap='onClickAddGift'>提交</button>
 
-    <view class="bg-container">
-        <image class="bg-image" src="/resources/images/halloween/bg_bottom.png"></image>
-    </view>
+    <button plain class='text' bindtap='onInfoClicked'>操作提示</button>
+
 </view>
