--- a/modules/party-gift-randomizer/pages/chooseGift/chooseGift.wxml
+++ b/modules/party-gift-randomizer/pages/chooseGift/chooseGift.wxml
@@ -1,47 +1,46 @@
-<view class="container page">
-    <view class="page-body">
-        <view class="page-section participant" style='margin-top:20px'>
-            <text class="desc">您正在为以下小伙伴购买道具</text>
+<view class="page">
 
-            <view class='avatar-container'>
-                <image class="avatar" src="{{imageBaseUrl}}{{beneficiary.avatar[0].url}}"></image>
-            </view>
-
-            <text class="nickName">{{beneficiary.nickName}}</text>
-
-            <view class='labels'>
-                <view class='label'>
-                    <text class="key">身高(CM)</text>
-                    <text class="value">{{beneficiary.height}}</text>
-                </view>
-                <view class='label'>
-                    <text class="key">体重(KG)</text>
-                    <text class="value">{{beneficiary.weight}}</text>
-                </view>
+    <view class="participant">
+        <text class="desc">您正在为以下小伙伴购买道具</text>
+        <view class='avatar'>
+            <view>
+                <image src="{{imageBaseUrl}}{{beneficiary.avatar[0].url}}"></image>
             </view>
         </view>
 
-        <view class="page-section">
-            <view class="page-section-spacing">
+        <text class="nickName">{{beneficiary.nickName}}</text>
 
-                <scroll-view scroll-y>
-                    <view class='flex-wrp'>
-                        <button class="flex-item {{(selectedGiftId===item.id) ? 'selected' : '' }}" data-id="{{item.id}}" wx:for="{{gifts}}" wx:key="{{index}}" wx:for-item="item" bindtap="{{onClickGift}}">
-                            <image class="thumbnail" src="{{imageBaseUrl}}{{item.thumbnail[0].url}}" />
-                        </button>
+        <view class='labels'>
+            <view class='label'>
+                <text class="key">身高(CM)</text>
+                <text class="value">{{beneficiary.height}}</text>
+            </view>
+            <view class='label'>
+                <text class="key">体重(KG)</text>
+                <text class="value">{{beneficiary.weight}}</text>
+            </view>
+        </view>
+    </view>
+
+    <scroll-view scroll-y>
+        <view class="gifts">
+            <button plain class="gift-wrapper"
+                    data-id="{{item.id}}" wx:for="{{gifts}}" wx:key="{{index}}" wx:for-item="item"
+                    bindtap="onClickGift">
+                <view class="gift">
+                    <image class="thumbnail" src="{{imageBaseUrl}}{{item.thumbnail[0].url}}"/>
+                    <view class="avatar">
+                        <view>
+                            <image class="ready-icon" src="{{'../../resources/images/ready.png'}}"
+                                   wx:if="{{selectedGiftId===item.id}}"></image>
+                        </view>
                     </view>
-                </scroll-view>
+                </view>
 
-            </view>
+            </button>
         </view>
+    </scroll-view>
 
-    </view>
+    <button plain class="primary" bindtap='onClickBuy'>去购买</button>
 
-    <view class="btn-area">
-        <button class='button' bindtap='onClickBuy' class="primary">去购买</button>
-    </view>
-
-    <view class="bg-container">
-        <image class="bg-image" src="/resources/images/halloween/bg_bottom.png"></image>
-    </view>
 </view>
