--- a/modules/party-gift-randomizer/pages/index/index.wxml
+++ b/modules/party-gift-randomizer/pages/index/index.wxml
@@ -1,14 +1,13 @@
-<view class="index">
-    <view class="index-bg">
-        <image class="bg-image" src="/resources/images/halloween/bg_homepage.png"></image>
-    </view>
-    <view class="index-hd">
-        <text class="index-desc">建立一个万圣节活动，随机安排一个朋友为你购买万圣节道具。</text>
-    </view>
+<view class="page">
 
-    <view class="btn-area">
-        <image class="btn-img" src="{{buttonUrl}}"></image>
-        <button wx:if="{{id == 0}}" type="primary" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onClickCreate" plain='true'></button>
-        <button wx:if="{{id > 0}}" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onClickJoin" plain="true"></button>
-    </view>
+    <text>建立一个万圣节活动，随机安排一个朋友为你购买万圣节道具。</text>
+
+    <button plain='true' wx:if="{{id == 0}}" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onClickCreate">
+        <image class="btn-img" src="{{'../../resources/images/btn_begin.png'}}"></image>
+    </button>
+
+    <button plain='true' wx:if="{{id > 0}}" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onClickJoin">
+        <image class="btn-img" src="{{'../../resources/images/btn_enter.png'}}"></image>
+    </button>
+
 </view>
