--- a/modules/party-gift-randomizer/pages/participants/participants.wxss
+++ b/modules/party-gift-randomizer/pages/participants/participants.wxss
@@ -1,54 +1,24 @@
 @import "../../base/app.wxss";
 
-.page {
-    padding-top: 80rpx;
-}
-
-.avatars-section {
+scroll-view {
+    margin-top: 80rpx;
+    width: 570rpx;
     height: 490rpx;
-    width: 600rpx;
-    overflow-y: auto;
-    margin: auto;
-}
-
-.avatars {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    flex-flow: row wrap;
-    align-content: flex-end;
-}
-
-.avatar-wrapper {
-    position: relative;
-    height: 52px;
-    width: 52px;
-    overflow: hidden;
-    margin: 5px;
-}
-
-.ready-icon {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-}
-
-.btn-view {
-    margin: 80rpx auto 30rpx;
+    margin-bottom: 10rpx;
 }
 
 .btn-start {
     position: absolute;
-    bottom: 160rpx;
-    width: 100%;
+    bottom: 0;
 }
 
-.desc {
-    margin-top: 20rpx;
-    color: #888;
-    font-size: 28rpx;
+.btn-start button {
+    margin: 0;
+}
+
+.btn-start image {
+    width: 274rpx;
+    height: 266rpx;
 }
 
 .title {
@@ -68,4 +38,97 @@ input {
     width: 85%;
     border-bottom: solid 1px #eaeaea;
     padding-left: 10rpx;
+}
+
+
+
+
+
+
+/* modal */
+.show-btn {
+    margin-top: 100rpx;
+    color: #22cc22;
+}
+
+.modal-mask {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #000;
+    opacity: 0.5;
+    overflow: hidden;
+    z-index: 9000;
+    color: #fff;
+}
+
+.modal-dialog {
+    width: 540rpx;
+    overflow: hidden;
+    position: fixed;
+    top: 50%;
+    left: 0;
+    z-index: 9999;
+    background: #f9f9f9;
+    margin: -180rpx 105rpx;
+    border-radius: 36rpx;
+}
+
+.modal-title {
+    padding-top: 50rpx;
+    font-size: 36rpx;
+    color: #030303;
+    text-align: center;
+}
+
+.modal-content {
+    padding: 50rpx 32rpx;
+}
+
+.modal-input {
+    display: flex;
+    background: #fff;
+    border: 2rpx solid #ddd;
+    border-radius: 4rpx;
+    font-size: 28rpx;
+}
+
+
+.input {
+    width: 100%;
+    height: 82rpx;
+    font-size: 28rpx;
+    line-height: 28rpx;
+    padding: 0 20rpx;
+    box-sizing: border-box;
+    color: #333;
+}
+
+input-holder {
+    color: #666;
+    font-size: 28rpx;
+}
+
+.modal-footer {
+    display: flex;
+    flex-direction: row;
+    height: 86rpx;
+    border-top: 1px solid #dedede;
+    font-size: 34rpx;
+    line-height: 86rpx;
+}
+
+.btn-cancel {
+    width: 50%;
+    color: #666;
+    text-align: center;
+    border-right: 1px solid #dedede;
+}
+
+.btn-confirm {
+    width: 50%;
+    color: #ec5300;
+    text-align: center;
 }
